--- a/index.html
+++ b/index.html
@@ -18,26 +18,38 @@
   <body>
     <!-- Start Header -->
     <header class="header">
-      <ul>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">About</a></li>
-      </ul>
+      <div class="container">
+        <ul>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#">About</a></li>
+        </ul>
+      </div>
     </header>
     <!-- End Header -->
     <!-- Start Landing -->
     <div class="landing">
-      <div class="text">
-        <p>hello</p>
-        <p class="name">i"m <span>Taha</span></p>
-        <p class="career">
-          Front-End Developer <br />Ui /Ux <span>Designer</span>
-        </p>
-        <button class="button">Let's Talk!</button>
+      <div class="container">
+        <div class="text">
+          <p>hello</p>
+          <p class="name">i"m <span>Taha</span></p>
+          <p class="career">
+            Front-End Developer <br />Ui /Ux <span>Designer</span>
+          </p>
+          <button class="button">Let's Talk!</button>
+        </div>
+        <picture class="img">
+          <img src="./images/taha-avatar.png" alt="Avatar" />
+        </picture>
       </div>
-      <picture class="img">
-        <img src="./images/taha-avatar.png" alt="Avatar" />
-      </picture>
-    <!-- End Landing -->
     </div>
+    <!-- End Landing -->
+    <!-- Start Footer -->
+    <footer class="footer">
+      <ul>
+        <li><a href="#"><i class="fa-github"></i></a></li>
+        <li><a href="#"><i class="fa-instagram"></i></a></li>
+      </ul>
+    </footer>
+    <!-- End Footer -->
   </body>
 </html>
