--- a/index.html
+++ b/index.html
@@ -30,24 +30,24 @@
     <div class="landing">
       <div class="container">
         <div class="text">
-          <p>hello</p>
-          <p class="name">i"m <span>Taha</span></p>
+          <p>hello.</p>
+          <p class="name">i'm <span>Taha</span></p>
           <p class="career">
             Front-End Developer <br />Ui /Ux <span>Designer</span>
           </p>
-          <button class="button">Let's Talk!</button>
+          <button class="button"><a href="">Let's Talk!</a></button>
         </div>
         <picture class="img">
           <img src="./images/taha-avatar.png" alt="Avatar" />
         </picture>
       </div>
     </div>
-    <!-- End Landing -->
+    <!-- End Landing
     <!-- Start Footer -->
     <footer class="footer">
       <ul>
-        <li><a href="#"><i class="fa-github"></i></a></li>
-        <li><a href="#"><i class="fa-instagram"></i></a></li>
+        <li><a target="_blank" href="https://github.com/thetaha1"><i class="fa-brands fa-github"></i></a></li>
+        <li><a target="_blank" href="https://www.instagram.com/thetaha11/"><i class="fa-brands fa-instagram"></i></a></li>
       </ul>
     </footer>
     <!-- End Footer -->
