--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
           <p class="career">
             Front-End Developer <br />Ui /Ux <span>Designer</span>
           </p>
-          <button class="button"><a href="">Let's Talk!</a></button>
+          <button class="button" id="email-me">
+            <a href="">Let's Talk!</a>
+          </button>
         </div>
         <picture class="img">
           <img src="./images/taha-avatar.png" alt="Avatar" />
@@ -46,10 +48,20 @@
     <!-- Start Footer -->
     <footer class="footer">
       <ul>
-        <li><a target="_blank" href="https://github.com/thetaha1"><i class="fa-brands fa-github"></i></a></li>
-        <li><a target="_blank" href="https://www.instagram.com/thetaha11/"><i class="fa-brands fa-instagram"></i></a></li>
+        <li>
+          <a target="_blank" href="https://github.com/thetaha1"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+        </li>
+        <li>
+          <a target="_blank" href="https://www.instagram.com/thetaha11/"
+            ><i class="fa-brands fa-instagram"></i
+          ></a>
+        </li>
       </ul>
     </footer>
     <!-- End Footer -->
+    <!-- JavaScript File -->
+    <script src="app.js"></script>
   </body>
 </html>
